[package]
name = "verusid_cashback"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
color-eyre = "0.6.2"
config = { version = "0.14.0", default-features = false, features = ["toml"] }
poise = { features = ["cache"], version = "0.6.1" }
secrecy = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.2.0"

tmq = { version = "0.4.0" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "std",
    "json",
] }
tracing-appender = "0.2.2"

vrsc-rpc = { path = "../rust-vrsc-rpc/client" }
# vrsc-rpc = { git = "https://github.com/jorian/rust-vrsc-rpc" }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "model",
    "utils",
    "collector",
    "framework",
]
version = "0.12.0"
